--- a/tabladeprecios.html
+++ b/tabladeprecios.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tabla de precios</title>
+    <title>Ejemplo Prueba</title>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;1,300&family=Raleway:ital,wght@0,300;0,500;1,200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="tabladeprecios.css">
 </head>
@@ -11,7 +11,7 @@
     <section class="Contenedor flex text-center">
         <div class="Columna"><!--Primer paquete-->
             <h2>Plan Uno</h2>
-            <p class="Precio">$50</p>
+            <p class="Precio">$60</p>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum suscipit ut doloribus asperiores! Optio maiores distinctio voluptas aspernatur vero asperiores delectus quas, accusamus consequatur in, quibusdam natus voluptatum. Maiores, saepe!</p>
             <p>Lorem ipsum dolor</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
@@ -21,7 +21,7 @@
         </div>
         <div class="Columna"><!--Segundo paquete-->
             <h2>Plan Dos</h2>
-            <p class="Precio">$60</p>
+            <p class="Precio">$80</p>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum suscipit ut doloribus asperiores! Optio maiores distinctio voluptas aspernatur vero asperiores delectus quas, accusamus consequatur in, quibusdam natus voluptatum. Maiores, saepe!</p>
             <hr>
             <p>Lorem ipsum dolor</p>
@@ -43,7 +43,7 @@
         </div>
         <div class="Columna"><!--Cuarto paquete-->
             <h2>Plan Cuatro</h2>
-            <p class="Precio">$90</p>
+            <p class="Precio">$100</p>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum suscipit ut doloribus asperiores! Optio maiores distinctio voluptas aspernatur vero asperiores delectus quas, accusamus consequatur in, quibusdam natus voluptatum. Maiores, saepe!</p>
             <hr>
             <p>Lorem ipsum dolor</p>
@@ -54,7 +54,7 @@
         </div>
         <div class="Columna"><!--Quinto paquete-->
             <h2>Plan Cinco</h2>
-            <p class="Precio">$100</p>
+            <p class="Precio">$120</p>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum suscipit ut doloribus asperiores! Optio maiores distinctio voluptas aspernatur vero asperiores delectus quas, accusamus consequatur in, quibusdam natus voluptatum. Maiores, saepe!</p>
             <hr>
             <p>Lorem ipsum dolor</p>
